# BrowserX

./: .gitignore  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.intent/: config.json
docs/: 00-overview-scope.md  01-cloakbrowser-research.md  02-critique-risks.md  03-target-architecture.md  04-licensing-legal-decision.md  05-roadmap-phases.md  06-local-eval-setup.md  07-features-spec.md  08-ui-spec.md  09-eval-baseline.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_db_backup.rs  archive.rs  backup.rs  binary.rs  cdp.rs  cloud_transport.rs  commands.rs  config.rs  cookierobot.rs  cookies.rs  crypto.rs  db.rs  engine_update.rs  error.rs  export.rs  extensions.rs  fingerprint_gpu.rs  geoip.rs  launcher.rs  lib.rs  logging.rs  main.rs  metrics.rs  models.rs  process.rs  profile_lock.rs  proxy_check.rs  storage.rs  telegram_sync.rs  userbot.rs
src-tauri/src/data/: webgl_pool.json
src-tauri/tests/: cookie_roundtrip.rs  exit_criteria.rs  fingerprint_diff.rs  fingerprint_seed.rs  proxy_health_accuracy.rs  soak.rs  stealth.rs  storage_state_roundtrip.rs
src/components/: AppUpdateBanner.tsx  Checkbox.tsx  CloudSyncView.tsx  ConfirmDialog.tsx  CookieDialog.tsx  CookieRobotDialog.tsx  EngineSetup.tsx  EngineUpdateBanner.tsx  ExtensionsView.tsx  FilterPanel.tsx  LanguageSwitcher.tsx  LaunchButton.tsx  Popover.tsx  ProfileForm.tsx  ProfileList.tsx  ProfileTable.tsx  ProfilesToolbar.tsx  ProxiesView.tsx  ProxyForm.tsx  ProxyTemplatesView.tsx  QuickProfileModal.tsx  QuickStopDialog.tsx  QuitDialog.tsx  RunningDashboard.tsx  SettingsView.tsx  Sidebar.tsx  (+5 more)
(+21 files in other folders)
