[package]
name = "browserx"
default-run = "browserx"
version = "0.1.0"
description = "BrowserX — local antidetect browser manager (Tauri v2)"
edition = "2021"
license = "MIT"
repository = "https://github.com/MintRouter/BrowserX"

[lib]
name = "browserx_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0.103"
argon2 = "0.5"
base64 = "0.22.1"
chacha20poly1305 = "0.11.0"
chromiumoxide = "0.9.1"
chrono = { version = "0.4.45", features = ["serde"] }
dirs = "6.0.0"
ed25519-dalek = "2.2.0"
flate2 = "1.1.9"
futures = "0.3.32"
hex = "0.4.3"
iana-time-zone = "0.1.65"
keyring = { version = "4.1.2", features = ["apple-native-keyring-store", "windows-native-keyring-store"] }
rand = "0.10.1"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "stream", "json", "socks", "multipart"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sys-locale = "0.3.2"
tar = "0.4.46"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2.3.1"
tdlib-rs = { version = "1.4.0", features = ["download-tdlib"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "process", "sync", "macros", "time"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
zip = "8.6.0"

[target."cfg(unix)".dependencies]
libc = "0.2.186"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.10.1"
